# apollo

./: .gitignore  CMakeLists.txt  compile_commands.json  runBuild.sh
buildMemIntensityAware/: Makefile  apollo-config.cmake  apollo-config.h  apollo.pc  cmake_install.cmake  install_manifest.txt
buildMemIntensityAware/src/: Makefile  cmake_install.cmake
buildVA/: Makefile  apollo-config.cmake  apollo-config.h  apollo.pc  cmake_install.cmake  install_manifest.txt
buildVA/src/: Makefile  cmake_install.cmake
include/apollo/: Apollo.h  Config.h  ModelFactory.h  Region.h
include/apollo/models/: BayesianOptim.h  DecisionTree.h  FullExplore.h
include/util/: spinlock.h
src/: Apollo.cpp  CMakeLists.txt  Config.cpp  ModelFactory.cpp  Region.cpp
src/helpers/: Parser.h
src/models/: BayesianOptim.cpp  DecisionTree.cpp  FullExplore.cpp  Optimal.cpp
src/models/impl/: DecisionTreeImpl.h
src/perfcntrs/: PapiCounters.cpp
src/python/analysis/: analyze-traces.py  opt-ApplyAccelerationBoundaryConditionsForNodes-rank-0.txt  opt-ApplyMaterialPropertiesForElems-rank-0.txt  opt-CalcAccelerationForNodes-rank-0.txt  opt-CalcCourantConstraintForElems-rank-0.txt  opt-CalcElemVolumeDerivative--hourglass-rank-0.txt  opt-CalcEnergyForElems1-rank-0.txt  opt-CalcEnergyForElems2-rank-0.txt  opt-CalcEnergyForElems3-rank-0.txt  opt-CalcEnergyForElems4-rank-0.txt  opt-CalcEnergyForElems5-rank-0.txt  opt-CalcFBHourglassForceForElems1-rank-0.txt  opt-CalcFBHourglassForceForElems2-rank-0.txt  opt-CalcForceForNodes-rank-0.txt  opt-CalcHydroConstraintForElems-rank-0.txt  opt-CalcKinematicsForElems-rank-0.txt  opt-CalcLagrangeElements-rank-0.txt  opt-CalcMonotonicQGradientsForElems-rank-0.txt  opt-CalcMonotonicQRegionForElems-rank-0.txt  opt-CalcPositionForNodes-rank-0.txt  opt-CalcPressureForElems1-rank-0.txt  opt-CalcPressureForElems2-rank-0.txt  opt-CalcSoundSpeedForElems-rank-0.txt  opt-CalcVelocityForNodes-rank-0.txt  opt-CalcVolumeForceForElems-rank-0.txt  opt-EvalEOSForElems1-rank-0.txt  opt-EvalEOSForElems2-rank-0.txt  opt-InitStressTermsForElems-rank-0.txt  opt-IntegrateStressForElems1-rank-0.txt  opt-IntegrateStressForElems2-rank-0.txt  opt-UpdateVolumesForElems-rank-0.txt  plot_gp.py  rtree2dot.py  secondtest.dot  testout.dot  thirdtest.dot
src/python/modeling/: Dataset-find_ellipse.c.apollo.region.l113.yaml  Dataset-find_ellipse.c.apollo.region.l190.yaml  Dataset-track_ellipse.c.apollo.region.l84.yaml  create-dataset.py
test/: CMakeLists.txt  apollo-test-bo.cpp
(+3 files in other folders)
